# oag-agent

./: .gitignore  README.md  pyproject.toml
oag/: agent.py  harness.py  ontology_runtime.py
oag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
oag/llm/: __init__.py  context.py
oag/loop/: __init__.py  confirmation_flow.py  query_loop.py  tool_executor.py  worker.py
oag/ontology/: inspector.py  prompt_builder.py  runtime.py  schema.py  tool_registration.py  validators.py
oag/runtime/: components.py  config.py  events.py  message_sanitizer.py  session_store.py  state.py  stop_check.py  tool_result_store.py  trace.py
oag/tools/: pipeline.py  registry.py  runtime_tools.py
tests/: test_harness_runtime.py
