[project]
name = "oag"
version = "0.1.0"
description = "OAG — Ontology Augmented Generation agent framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "sse-starlette>=1.6",
    "pandas>=2.0",
]

[project.scripts]
oag = "oag.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
